# whitebord-rs

./: .gitignore  Cargo.toml
src/: atomic_view_port.rs  element.rs  element_id.rs  element_type.rs  from_js_key.rs  lib.rs  renderer.rs  view_port.rs
src/element/: id.rs  json_entity.rs  type.rs
src/renderer/: canvas_renderer.rs  incremental_svg_renderer.rs  renderer.rs  svg_renderer.rs
src/renderer/incremental_svg_renderer/: create_svg.rs  update_svg.rs
src/renderer/renderer/: canvas_renderer.rs  incremental_svg_renderer.rs  svg_renderer.rs
src/renderer/renderer/incremental_svg_renderer/: create_svg.rs  update_svg.rs
