[package]
name = "whiteboard-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# This is a temporarly workaround due to bug in wasm-pack.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory-opt"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
strip = true
debug = false
lto = true
codegen-units = 1

[dependencies]
graphics-rs = { path = "../graphics-rs" }

wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "SvgsvgElement",
    "SvgRectElement",
    "SvgLineElement",
    "SvgPolygonElement",
    "Window",
    "Document"
] }
js-sys = "0.3.77"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
dyn_serde = "1.0.2"

