[package]
name = "whiteboard-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# This is a temporarly workaround due to bug in wasm-pack.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory-opt"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
strip = true
debug = false
lto = true
codegen-units = 1

[dependencies]
entity-model-feature = { path = "../graphics-rs/lib/entity-model-feature" }
algebra = { path = "../graphics-rs/lib/algebra" }
geometry = { path = "../graphics-rs/lib/geometry" }
event-handler = { path = "../graphics-rs/lib/event-handler" }

standard-svg-plugin = { path = "../graphics-rs/plugin/standard-svg-plugin" }
standard-entity-plugin = { path = "../graphics-rs/plugin/standard-entity-plugin" }
standard-rendering-plugin = { path = "../graphics-rs/plugin/standard-rendering-plugin" }
standard-tool-plugin = { path = "../graphics-rs/plugin/standard-tool-plugin" }

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "SvgsvgElement",
    "SvgCircleElement",
    "SvgRectElement",
    "SvgLineElement",
    "SvgPolygonElement",
    "SvgPathElement",
    "Window",
    "Document",
    "CssStyleDeclaration"
] }
js-sys = "0.3.77"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
dyn_serde = "1.0.2"
serde_json = "1.0.140"

